# home-stuff-infra

./: .gitignore  LICENSE  Makefile  README.md  cdktf.json  docker-compose.yaml  package.json  pnpm-lock.yaml
lambdas/rust-lambda/: .env  .gitignore  Cargo.toml  Makefile  docker-compose.yaml
lambdas/rust-lambda/doc/diagrams/: libraries.py
lambdas/rust-lambda/doc/diagrams/docker/: Dockerfile
lambdas/rust-lambda/lambda_e2e/: Cargo.toml
lambdas/rust-lambda/lambda_e2e/src/tests/: auth_tests.rs
lambdas/rust-lambda/lambda_e2e/src/tests/common/: config.rs  mod.rs
lambdas/rust-lambda/src/clients/auth_service_client/: Cargo.toml  README.md
lambdas/rust-lambda/src/clients/auth_service_client/.openapi-generator/: FILES
lambdas/rust-lambda/src/clients/auth_service_client/docs/: AddUserRequest.md  AddUserResponse.md  AuthApi.md  AuthErrorResponse.md  AuthRequest.md  AuthSuccessResponse.md  CommandRequest.md  CommandResponse.md  ErrorResponse.md  GetAllResponse.md  GetResponse.md  HealthcheckApi.md  ProfileResponse.md  SuccessResponse.md  SuperauthApi.md  SuperrootApi.md  SuperusersApi.md  User.md  UsersApi.md
lambdas/rust-lambda/src/clients/auth_service_client/src/apis/: auth_api.rs  client.rs  configuration.rs  healthcheck_api.rs  mod.rs  superauth_api.rs  superroot_api.rs  superusers_api.rs  users_api.rs
lambdas/rust-lambda/src/clients/auth_service_client/src/models/: add_user_request.rs  add_user_response.rs  auth_error_response.rs  auth_request.rs  auth_success_response.rs  command_request.rs  command_response.rs  error_response.rs  get_all_response.rs  get_response.rs  mod.rs  profile_response.rs  success_response.rs  user.rs
lambdas/rust-lambda/src/clients/rust_templates/: Cargo.mustache  lib.mustache  request.rs
lambdas/rust-lambda/src/clients/rust_templates/hyper/: api.mustache  api_mod.mustache  client.mustache  configuration.mustache
lambdas/rust-lambda/src/core/aws_config_core/: Cargo.toml
lambdas/rust-lambda/src/core/aws_config_core/src/: aws_config.rs  lib.rs  local_stack_config.rs
lambdas/rust-lambda/src/core/config_core/: Cargo.toml
lambdas/rust-lambda/src/core/config_core/src/: env_enum.rs  error.rs  lib.rs  service_config.rs
lambdas/rust-lambda/src/core/config_core/src/config_loader/: default_config_loader.rs  dotenv_config_loader.rs  mod.rs  service_config_loader.rs
lambdas/rust-lambda/src/core/dynamo_persistence_core/: Cargo.toml
lambdas/rust-lambda/src/core/dynamo_persistence_core/src/: client_factory.rs  db_model.rs  error.rs  lib.rs  repository.rs  to_attribute.rs
lambdas/rust-lambda/src/core/dynamo_persistence_core/src/transaction/: mod.rs  transaction_executor.rs  transaction_get.rs  transaction_write.rs
lambdas/rust-lambda/src/core/lambda_core/: Cargo.toml
lambdas/rust-lambda/src/core/lambda_core/src/: broken_service.rs  lambda_service.rs  lib.rs
lambdas/rust-lambda/src/core/service_core/: Cargo.toml
lambdas/rust-lambda/src/core/service_core/src/: lib.rs  service.rs
lambdas/rust-lambda/src/core/service_core/src/auth/: admin_claims.rs  auth_config.rs  claims.rs  error.rs  jwt_auth_state.rs  mod.rs  user_provider.rs
lambdas/rust-lambda/src/core/service_core/src/cors/: create_layer.rs  error.rs  mod.rs
lambdas/rust-lambda/src/core/service_core/src/handlers/: healthcheck.rs  mod.rs  not_found.rs
lambdas/rust-lambda/src/core/service_core/src/open_api/: mod.rs  router.rs  save_spec.rs  security_addon.rs
lambdas/rust-lambda/src/core/service_core/src/responses/: error_response.rs  mod.rs
lambdas/rust-lambda/src/core/service_core/src/tracing/: init.rs  mod.rs  trace_layer.rs
lambdas/rust-lambda/src/lambdas/auth_lambda/: Cargo.toml  auth-service.openapi.spec.json  build.rs
lambdas/rust-lambda/src/lambdas/auth_lambda/src/: main.rs
lambdas/rust-lambda/src/services/auth_service/: Cargo.toml
lambdas/rust-lambda/src/services/auth_service/benches/: password_hashers.rs
lambdas/rust-lambda/src/services/auth_service/src/: config.rs  lib.rs
lambdas/rust-lambda/src/services/auth_service/src/handlers/: api_doc.rs  auth.rs  mod.rs  users.rs
lambdas/rust-lambda/src/services/auth_service/src/persistence/: mod.rs  persistence_layer.rs  user_cred_repository.rs  user_repository.rs  user_tx_repository.rs
lambdas/rust-lambda/src/services/auth_service/src/persistence/dynamo/: mod.rs  persistence_layer.rs  user_cred_repository.rs  user_repository.rs  user_tx_repository.rs
lambdas/rust-lambda/src/services/auth_service/src/persistence/inmemory/: create_test_admin.rs  mod.rs  persistence_layer.rs  user_cred_repository.rs  user_repository.rs  user_tx_repository.rs
lambdas/rust-lambda/src/services/auth_service/src/security/: password_hasher.rs
lambdas/rust-lambda/src/services/auth_service/tests/: auth_tests.rs
lambdas/rust-lambda/src/services/auth_service/tests/common/: config.rs  mod.rs  setup.rs
lambdas/rust-lambda/src/testing/authload/: Cargo.toml
lambdas/rust-lambda/src/testing/authload/src/: main.rs
src/: HomeStuffStack.ts  main.ts
src/lib/: AdminUserDeploymentConstruct.ts  DynamoUsersTableConstruct.ts  LambdaDeploymentConstruct.ts  LocalStackProvider.ts
src/lib/persistence/: DynamoDbTypes.ts  DynamoTableConstruct.ts  PopulateDynamoTableConstruct.ts
src/lib/persistence/user/: scheme.md  tables.ts
