[package]
name = "lambda-e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
config = { version = "0.13.1", features = [ "json" ] }
serde = "1.0.136"

lambda-client = { path = "../lambda_client" }
