[package]
name = "aws-config-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-credential-types = "0.54.1"
aws-types = "0.54.1"
aws-smithy-http = "0.54.1" 

config-core = { path = "../config_core" }
