[package]
name = "dynamo-persistence-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
thiserror = "1.0.38"

serde = "1.0.136"
serde_dynamo = { version = "4.0.12", features = ["aws-sdk-dynamodb+0_24"] }

aws-types = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
