[package]
name = "lambda-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.7.3"

axum = { version = "0.6.6", features = [ "headers" ] }
axum-aws-lambda = "0.4.0"

serde_json = "1.0.93"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

service-core = { path = "../service_core" }
