[package]
name = "service-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.6", features = [ "headers" ] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
http = "0.2.9"

jsonwebtoken = {version = "8.2.0", default-features = false }

thiserror = "1.0.38"
utoipa = { version = "3", features = ["chrono", "uuid"] }

chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng",  "serde"] }

serde = "1.0.136"
validator = { version = "0.16", features = ["derive"] }

tokio = { version = "1", features = ["macros", "signal"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

config-core = { path = "../config_core" }

[dev-dependencies]
#lambda-client = { path = "../lambda_client" }