[package]
name = "auth-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["test_run"]
lambda = ["auth-service/persistence_dynamo"]
test_run = ["auth-service/persistence_inmemory"]

[dependencies]
tokio = { version = "1", features = ["macros"] }

lambda-core = { path = "../../core/lambda_core" }
service-core = { path = "../../core/service_core" }
auth-service = { path = "../../services/auth_service" } 

[build-dependencies]
service-core = { path = "../../core/service_core" }
auth-service = { path = "../../services/auth_service", default-features = false } 