[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["persistence_inmemory", "persistence_dynamo"]
persistence_inmemory=["dep:dashmap"]
persistence_dynamo=[]


[dependencies]
axum = { version = "0.6.6", features = [ "headers" ] }
serde = "1.0.136"
thiserror = "1.0.38"

utoipa = { version = "3", features = ["chrono", "uuid"] }

chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng",  "serde"] }

validator = { version = "0.16", features = ["derive"] }

# for password
digest = "0.10.6"
sha2 = "0.10"

ring = "0.16.20"
data-encoding = "2.3.3"

dashmap = { version = "5.4.0", optional = true }

service-core = { path = "../../core/service_core" }
aws-config-core = { path = "../../core/aws_config_core" }
dynamo-persistence-core = { path = "../../core/dynamo_persistence_core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
dotenvy = "0.15.6"
config = { version = "0.13.1" }
lazy_static = "1.4.0"
criterion = { version = "0.4", features = ["html_reports"] }

auth-service-client = { path = "../../clients/auth_service_client" }

[[bench]]
name = "password_hashers"
harness = false

