[package]
name = "authload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "0.17"
tokio = { version = "1.26", features = ["macros"] }
reqwest = "0.11.14"

auth-service-client = { path = "../../clients/auth_service_client" }